Fixed misaligned last column
Same issue the foundation framework has, the last column is slightly mis-aligned (sometimes) with the rest of the blocks. This update fixes that.

--- a/css/1140.css
+++ b/css/1140.css
@@ -77,6 +77,7 @@ float: left;
 
 .last {
 margin-right: 0px;
+float:right;
 }
 
 img, object, embed {
